--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,36 @@
 // 导入混合宏
 @use "./_mixins.scss" as *;
+@use "./_variables.scss" as *;
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: $font-main;
+  line-height: 1.5;
+  font-size: $font-size-16;
+  color: $gray-8;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  transition: all 0.3s ease-in-out;
+  --webkit-font-smoothing: antialiased;
+  --moz-osx-font-smoothing: grayscale;
+}
+
+p {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
+a {
+  color: $primary;
+  text-decoration: none;
+}
