feat: 增加留言创建功能及优化样式

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -54,3 +54,14 @@ $font-size-28: 28px;
 // 响应式断点
 $mobile: 768px;
 $tablet: 992px;
+
+
+// 长度
+$length-full: 100%;
+$length-10:10px;
+$length-12:12px;
+$length-16:16px;
+$length-18:18px;
+$length-20:20px;
+$length-22:22px;
+$length-24:24px;
