--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -38,15 +38,18 @@ $radius-24: 24px;
 // 内边距
 $padding-4: 4px;
 $padding-8: 8px;
-$padding-16: 16px;
 $padding-12: 12px;
+$padding-16: 16px;
 $padding-24: 24px;
+$padding-32: 32px;
+$padding-48: 48px;
 
 // 字体
 $font-main: "Inter", sans-serif;
 $font-size-12: 12px;
 $font-size-14: 14px;
 $font-size-16: 16px;
+$font-size-18: 18px;
 $font-size-20: 20px;
 $font-size-24: 24px;
 $font-size-28: 28px;
