--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,14 @@ $color-cream: #fef6de;
 $color-mint: #e2f7d9;
 $color-brown: #8d6e63;
 
+// 卡片颜色 - 深色模式
+$color-rose-dark: #8b6f67;
+$color-lavender-dark: #6b5d9e;
+$color-sky-dark: #5a8c94;
+$color-cream-dark: #9e8f5f;
+$color-mint-dark: #638f57;
+$color-brown-dark: #6d564c;
+
 // 中性色
 $gray-0: #ffffff;
 $gray-1: #f5f5f5;
