--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -49,6 +49,7 @@ $padding-8: 8px;
 $padding-12: 12px;
 $padding-16: 16px;
 $padding-24: 24px;
+$padding-20: 20px;
 $padding-32: 32px;
 $padding-48: 48px;
 
@@ -56,6 +57,7 @@ $padding-48: 48px;
 $font-main: "Inter", sans-serif;
 $font-size-12: 12px;
 $font-size-14: 14px;
+$font-size-15: 15px;
 $font-size-16: 16px;
 $font-size-18: 18px;
 $font-size-20: 20px;
