feat(ui): 更新登录和注册页面的UI设计和动画效果
- 替换顶部栏和登录页面的图标为更现代的emoji风格
- 添加文字动画效果增强视觉体验
- 优化深色模式下的颜色和过渡效果
- 改进表单元素的间距和布局

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -89,12 +89,12 @@ body {
   font-size: var(--font-size-base);
   color: var(--color-text-primary);
   background-color: var(--color-bg-primary);
-  transition: background-color var(--transition-duration) ease-in-out, 
+  transition: background-color var(--transition-duration) ease-in-out,
               color var(--transition-duration) ease-in-out;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+a
 p {
   padding: 0;
   margin: 0;
